fix gap subtitles spa-ficha

--- a/theme/pages/spa-ficha/_spa-ficha.scss
+++ b/theme/pages/spa-ficha/_spa-ficha.scss
@@ -181,16 +181,23 @@
 }
 
 .acabados__title {
-  @extend .ficha-prestaciones__subtitle;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  gap: 12px;
+
   h3 {
     text-align: center;
+    margin: 0;
   }
 
   p {
     text-align: center;
+    margin: 0;
   }
   @include media-breakpoint-up(lg) {
-    gap: 24px;
+    gap: 16px;
 
     p {
       max-width: 720px;
@@ -203,17 +210,19 @@
   flex-direction: column;
   align-items: center;
   align-self: center;
-  gap: 20px;
+  gap: 12px;
 
   h3 {
     text-align: center;
+    margin: 0;
   }
 
   p {
     text-align: center;
+    margin: 0;
   }
   @include media-breakpoint-up(lg) {
-    gap: 24px;
+    gap: 16px;
 
   }
 }
